# GenomicsDB

./: .classpath  .codecov.yml  .factorypath  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.release  Dockerfile.release_prereqs  LICENSE  Patch_v1.0.0.md  README.md  README.rst  Style.md  codecov.yml  index.rst  pom.xml
.github/: dependabot.yml
.github/resources/: codeql-config.yml
.github/resources/hadoop/: hadoop-env.sh  hdfs-site.xml
.github/scripts/: cleanup_hosts.sh  install_hadoop.sh  install_spark.sh  tag_for_docker_release.sh  test_hdfs_htslib_support.sh
.github/workflows/: basic.yml  codeql-analysis.yml  codeql.yml  docker.yml  java11.yml  release.yml  release_jar.yml  release_publish.yml  release_test.yml  spark2.yml  valgrind.yml
.travis/resources/gcs/: GCS.json.enc
.travis/resources/hadoop/: core-site.xml  hadoop-env.sh
.travis/scripts/: install_hadoop.sh  install_osx_dependencies.sh  install_spark.sh  protobuf-v3.0.0-beta-1.autogen.sh.patch
cmake/Modules/: CheckAndSetStdCXX2011Flag.cmake  FindCURL.cmake  FindGPerftools.cmake  FindProtobufWrapper.cmake  FindRapidJSON.cmake  FindSemaphoreSupport.cmake  FindSpdlog.cmake  FindStringView.cmake  FindTileDB.cmake  Findfmt.cmake  Findhtslib.cmake  Findlibcsv.cmake  Findlibuuid.cmake  Findnanoarrow.cmake
docs/: Doxyfile  apis.rst  building-installing.rst  cli-tools.rst  common-issues.rst  conf.py  import-etl.rst  index.rst  overview.rst  protodoc.tmpl  requirements.txt  storage.rst
docs/_build/html/: .buildinfo  apis.html  build_and_install.html  building-installing.html  cli-tools.html  common-issues.html  examples.html  faqs.html  gatk.html  genindex.html  import-etl.html  index-full.html  index.html  notebooks.html  objects.inv  overview.html  search.html  searchindex.js  (+3 more)
docs/doxyrst/: cplusplus.rst  javaimporter.rst  javareader.rst
docs/examples/: gatk.rst  import-examples.rst  notebooks.rst  python.ipynb
docs/javadocs/: index.rst  packages.rst
docs/python/: genomicsdb.rst  modules.rst
example/java/: TestBufferStreamGenomicsDBImporter.java  TestGenomicsDB.java  TestGenomicsDBDataSourceV2.java  TestGenomicsDBImporterWithMergedVCFHeader.java  TestGenomicsDBSource.java  TestGenomicsDBSparkHDFS.java
example/python/: test_ga4gh.py
example/src/: test_genomicsdb_bcf_generator.cc  test_genomicsdb_importer.cc
scripts/: Dockerfile  README.md  install_genomicsdb.sh
scripts/prereqs/: install_prereqs.sh  protobuf-v3.0.0-beta-1.autogen.sh.patch
src/main/: CMakeLists.txt  genomicsdb.pc.in
src/resources/: CMakeLists.txt  genomicsdb-spark-submit.sh  genomicsdb_callsets_mapping.proto  genomicsdb_coordinates.proto  genomicsdb_export_config.proto  genomicsdb_import_config.proto  genomicsdb_vid_mapping.proto  log4j.properties
src/resources/ga4gh/: CMakeLists.txt  common.proto  variants.proto
src/test/cpp/: CMakeLists.txt
src/test/cpp/include/: test_base.h  test_common.h  test_data_provider_for_remapper.h  test_mapping_data_loader.h  test_remapped_data_receiver.h  test_valid_row_tracker.h
src/test/cpp/inputs/: test.tgz
src/test/cpp/src/: CMakeLists.txt  ctest_main.cc  test_alleles_combiner.cc  test_bgen.cc  test_columnar_gvcf_iterator.cc  test_config.cc  test_genomicsdb_api.cc  test_genomicsdb_demo.cc  test_gt_remapper.cc  test_htslib_plugin.cc  test_loader_rc.cc  test_logger.cc  test_mapping_data_loader.cc  test_mem_utils.cc  test_multid_vector.cc  test_non_diploid_mapper.cc  test_pb.cc  test_query_variants.cc
tests/: common.py  docker_test.sh  file2  file3  load_genomics_metadata.sh  run.py  run_spark_hdfs.py  test_hfile_plugin.sh  test_tools.sh
tests/golden_outputs/: bigint.vcf  bigint_java.vcf  deletion_with_partition_straddle_load_stdout  duplicate_fields_java_vcf  java_empty_vcf  java_t0_1_2_vcf_at_0_with_DP_filter  java_t0_1_vcf_at_0  multi_contig_empty_contigs_java_vcf  multi_contig_java_vcf  spanning_with_partition_straddle_load_stdout  spark_t0_1_2_combined_v2  spark_t0_1_2_vcf_at_0_v2  spark_t0_1_2_vcf_at_12100_v2  spark_t0_1_2_vcf_at_12150_v2  spark_t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf  spark_t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf_produce_GT  spark_t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf_produce_GT_v2  spark_t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf_v2  spark_t0_overlapping_at_12202_v2  spark_t6_7_8_vcf_at_0_v2  spark_t6_7_8_vcf_at_8029500-8029500_v2  spark_t6_7_8_vcf_at_8029500_v2  t0_1_2_all_asa_java_query_vcf_no_remap_missing  t0_1_2_all_asa_loading_no_remap_missing  t0_1_2_calls_at_0_with_DP_filter  t0_1_2_java_query_vcf_no_remap_missing  t0_1_2_loading_no_remap_missing  t0_1_2_variants_at_0_with_DP_filter  t0_1_2_vcf_at_0_with_DP_filter  t0_1_vcf_at_0  t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf  t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf_produce_GT  t0_haploid_triploid_1_2_3_triploid_deletion_java_vcf_produce_GT_for_min_PL  t0_haploid_triploid_1_2_3_triploid_deletion_vcf_produce_GT  t0_haploid_triploid_1_2_3_triploid_deletion_vcf_produce_GT_for_min_value_PL  t6_7_8_asa.vcf  t6_7_8_asa_vcf_at_8029500  t6_7_8_vcf_at_0_max_genotype_count_8  t6_SNV_t7_MNV_t8_loading.vcf
tests/inputs/: Pop_tri_nonchrom_subset.fa.gz.fai  Pop_tri_nonchrom_subset.fa.gz.gzi  chr1_2_3_4_70Kb.fasta.gz.fai  chr1_2_3_4_70Kb.fasta.gz.gzi  compatibility.array.schema.version.1.tar  compatibility.pre.1.0.0.test.tar  vid_all_asa_no_remap_missing.json  vid_bigint.json  vid_multi_contig.json  vid_multi_contig_empty_contigs.json  vid_no_remap_missing.json  vid_pb.json
tools/: CMakeLists.txt  EnvironmentVariables.md  genomicsdbproto.sh
tools/include/: cli.h  common.h  vcfdiff.h
tools/src/: _consolidate_genomicsdb_array.cc  _create_genomicsdb_workspace.cc  _gt_mpi_gather.cc  _vcf2genomicsdb.cc  _vcf2genomicsdb_init.cc  _vcf_histogram.cc  _vcfdiff.cc  cli.cc  consolidate_genomicsdb_array.cc  consolidate_tiledb_array.cc  create_genomicsdb_workspace.cc  create_tiledb_workspace.cc  gt_mpi_gather.cc  vcf2genomicsdb.cc  vcf2genomicsdb_init.cc  vcf2tiledb.cc  vcf_histogram.cc  vcfdiff.cc
(+360 files in other folders)
